--- a/po/lt.po
+++ b/po/lt.po
@@ -3,454 +3,466 @@
 # This file is distributed under the same license as the gdl package.
 #
 # Gintautas Miliauskas <gintas@akl.lt>, 2008.
+# Aurimas Černius <aurisc4@gmail.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-02 15:37+0200\n"
-"PO-Revision-Date: 2008-03-02 15:36+0200\n"
-"Last-Translator: Gintautas Miliauskas <gintas@akl.lt>\n"
-"Language-Team: Lithuanian <gnome-lt@lists.akl.lt>\n"
+"POT-Creation-Date: 2010-08-17 17:33+0300\n"
+"PO-Revision-Date: 2010-08-17 17:33+0300\n"
+"Last-Translator: Aurimas Černius <aurisc4@gmail.com>\n"
+"Language-Team: Lietuvių <gnome-lt@lists.akl.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
+"Content-Transfer-Encoding: UTF-8\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
 "100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: ../gdl/gdl-data-view.c:418
-msgid "Expander Size"
-msgstr ""
-
-#: ../gdl/gdl-data-view.c:419
-msgid "Size of the expander arrow."
-msgstr ""
-
-#: ../gdl/gdl-dock-item-grip.c:375
-msgid "Iconify"
-msgstr ""
-
-#: ../gdl/gdl-dock-item-grip.c:375
+#: ../gdl/gdl-dock-item-grip.c:381
 msgid "Iconify this dock"
-msgstr ""
+msgstr "Paversti šį įstatą piktograma"
 
-#: ../gdl/gdl-dock-item-grip.c:377
-msgid "Close"
-msgstr "Užverti"
-
-#: ../gdl/gdl-dock-item-grip.c:377
+#: ../gdl/gdl-dock-item-grip.c:383
 msgid "Close this dock"
-msgstr ""
+msgstr "Uždaryti šį įstatą"
 
-#: ../gdl/gdl-dock-item-grip.c:686 ../gdl/gdl-dock-tablabel.c:128
+#: ../gdl/gdl-dock-item-grip.c:703 ../gdl/gdl-dock-tablabel.c:125
 msgid "Controlling dock item"
-msgstr ""
+msgstr "Įstatomojo elemento kontrolė"
 
-#: ../gdl/gdl-dock-item-grip.c:687
+#: ../gdl/gdl-dock-item-grip.c:704
 msgid "Dockitem which 'owns' this grip"
-msgstr ""
+msgstr "Įstatomasis elementas, kuriam „priklauso“ ši griebiamoji zona"
 
-#: ../gdl/gdl-dock-item.c:243
+#: ../gdl/gdl-dock-item.c:255
 msgid "Orientation"
-msgstr ""
+msgstr "Kryptis"
 
-#: ../gdl/gdl-dock-item.c:244
+#: ../gdl/gdl-dock-item.c:256
 msgid "Orientation of the docking item"
-msgstr ""
+msgstr "Įstatomojo elemento kryptis"
 
-#: ../gdl/gdl-dock-item.c:259
+#: ../gdl/gdl-dock-item.c:271
 msgid "Resizable"
-msgstr ""
+msgstr "Keičiamo dydžio"
 
-#: ../gdl/gdl-dock-item.c:260
+#: ../gdl/gdl-dock-item.c:272
 msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
 msgstr ""
+"Jei nustatyta, įstatomojo elemento dydis gali būti pakeistas, kai jis "
+"įstatytas į GtkPanel valdiklį"
 
-#: ../gdl/gdl-dock-item.c:267
+#: ../gdl/gdl-dock-item.c:279
 msgid "Item behavior"
-msgstr ""
+msgstr "Elemento elgsena"
 
-#: ../gdl/gdl-dock-item.c:268
+#: ../gdl/gdl-dock-item.c:280
 msgid ""
 "General behavior for the dock item (i.e. whether it can float, if it's "
 "locked, etc.)"
 msgstr ""
+"Įstatomojo elemento bendroji elgsena (pvz. ar gali slankioti, jei "
+"užrakintas, ir pan.)"
 
-#: ../gdl/gdl-dock-item.c:276 ../gdl/gdl-dock-master.c:145
+#: ../gdl/gdl-dock-item.c:288 ../gdl/gdl-dock-master.c:145
 msgid "Locked"
-msgstr ""
+msgstr "Užrakintas"
 
-#: ../gdl/gdl-dock-item.c:277
+#: ../gdl/gdl-dock-item.c:289
 msgid ""
 "If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr ""
+"Jei nustatyta, įstatomasis elementas negali būti tampomas ir neturi "
+"griebiamosios zonos"
 
-#: ../gdl/gdl-dock-item.c:285
+#: ../gdl/gdl-dock-item.c:297
 msgid "Preferred width"
-msgstr ""
+msgstr "Pageidautinas plotis"
 
-#: ../gdl/gdl-dock-item.c:286
+#: ../gdl/gdl-dock-item.c:298
 msgid "Preferred width for the dock item"
-msgstr ""
+msgstr "Pageidautinas dydis įstatomajam elementui"
 
-#: ../gdl/gdl-dock-item.c:292
+#: ../gdl/gdl-dock-item.c:304
 msgid "Preferred height"
-msgstr ""
+msgstr "Pageidautinas aukštis"
 
-#: ../gdl/gdl-dock-item.c:293
+#: ../gdl/gdl-dock-item.c:305
 msgid "Preferred height for the dock item"
-msgstr ""
+msgstr "Pageidautinas aukštis įstatomajam elementui"
 
-#: ../gdl/gdl-dock-item.c:543
+#: ../gdl/gdl-dock-item.c:644
 #, c-format
 msgid ""
 "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
 "some other compound dock object."
 msgstr ""
+"Jūs negalite pridėti įstato objekto (%p tipo %s) %s viduje. naudokite "
+"GdlDock ar kitą sudėtinį įstato objektą"
 
-#: ../gdl/gdl-dock-item.c:550
+#: ../gdl/gdl-dock-item.c:651
 #, c-format
 msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
 "widget at a time; it already contains a widget of type %s"
 msgstr ""
+"Bandoma pridėti %s tipo valdiklį prie %s, tačiau jis gali talpinti tik vieną "
+"valdiklį; jis jau talpina %s tipo valdiklį"
 
-#: ../gdl/gdl-dock-item.c:1236 ../gdl/gdl-dock-item.c:1286
+#: ../gdl/gdl-dock-item.c:1358 ../gdl/gdl-dock-item.c:1408
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
-msgstr ""
+msgstr "Nepalaikoma įstatimo strategija %s %s tipo įstatomajame objekte"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1390
+#: ../gdl/gdl-dock-item.c:1516
 msgid "UnLock"
 msgstr "Atrakinti"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1397
+#: ../gdl/gdl-dock-item.c:1523
 msgid "Hide"
 msgstr "Slėpti"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1402
+#: ../gdl/gdl-dock-item.c:1528
 msgid "Lock"
 msgstr "Užrakinti"
 
-#: ../gdl/gdl-dock-item.c:1608
+#: ../gdl/gdl-dock-item.c:1766
 #, c-format
 msgid "Attempt to bind an unbound item %p"
-msgstr ""
+msgstr "Bandoma susieti nesusietą elementą %p"
 
-#: ../gdl/gdl-dock-layout.c:123 ../gdl/gdl-dock-bar.c:108
+#: ../gdl/gdl-dock-layout.c:119 ../gdl/gdl-dock-bar.c:105
 msgid "Master"
-msgstr ""
+msgstr "Pagrindinis"
 
-#: ../gdl/gdl-dock-layout.c:124
+#: ../gdl/gdl-dock-layout.c:120
 msgid "GdlDockMaster object which the layout object is attached to"
-msgstr ""
+msgstr "GdlDockMaster objektas, prie kurio yra prikabintas išdėstymo objektas"
 
-#: ../gdl/gdl-dock-layout.c:131
+#: ../gdl/gdl-dock-layout.c:127
 msgid "Dirty"
-msgstr ""
+msgstr "Nešvarus"
 
-#: ../gdl/gdl-dock-layout.c:132
+#: ../gdl/gdl-dock-layout.c:128
 msgid "True if the layouts have changed and need to be saved to a file"
-msgstr ""
+msgstr "Teigiama, jei išdėstymas pakito ir reikalauja išsaugojimo į bylą"
 
-#. FIXME: pop up an error dialog
-#: ../gdl/gdl-dock-layout.c:563
+#: ../gdl/gdl-dock-layout.c:560
 #, c-format
 msgid "Could not load layout user interface file '%s'"
-msgstr ""
+msgstr "Nepavyko įkelti vartotojo sąsajos bylos '%s'"
 
-#: ../gdl/gdl-dock-layout.c:618
+#: ../gdl/gdl-dock-layout.c:617
 msgid "Visible"
-msgstr ""
+msgstr "Matomas"
 
-#: ../gdl/gdl-dock-layout.c:625
+#: ../gdl/gdl-dock-layout.c:624
 msgid "Item"
-msgstr ""
+msgstr "Elementas"
 
-#: ../gdl/gdl-dock-layout.c:708 ../gdl/gdl-dock-object.c:119
+#: ../gdl/gdl-dock-layout.c:709 ../gdl/gdl-dock-object.c:117
 msgid "Name"
-msgstr ""
+msgstr "Vardas"
 
-#: ../gdl/gdl-dock-layout.c:741 ../gdl/layout.glade.h:1
-msgid "Dock items"
-msgstr ""
-
-#: ../gdl/gdl-dock-layout.c:747 ../gdl/layout.glade.h:3
-msgid "Saved layouts"
-msgstr ""
-
-#: ../gdl/gdl-dock-layout.c:789
+#: ../gdl/gdl-dock-layout.c:767
 #, c-format
 msgid ""
 "While loading layout: don't know how to create a dock object whose nick is '%"
 "s'"
 msgstr ""
+"Išdėstymo įkėlimo metu: nežinoma, kaip sukurti įstato objektą, kurio "
+"slapyvardis „%s“"
 
-#: ../gdl/gdl-dock-layout.c:1268
-msgid "Layout managment"
-msgstr ""
-
-#: ../gdl/gdl-dock-master.c:138 ../gdl/gdl-dock.c:186
+#: ../gdl/gdl-dock-master.c:138 ../gdl/gdl-dock.c:184
 msgid "Default title"
-msgstr ""
+msgstr "Numatytasis pavadinimas"
 
 #: ../gdl/gdl-dock-master.c:139
 msgid "Default title for newly created floating docks"
-msgstr ""
+msgstr "Numatytasis pavadinimas naujai sukuriamiems slankiesiems įstatams"
 
 #: ../gdl/gdl-dock-master.c:146
 msgid ""
 "If is set to 1, all the dock items bound to the master are locked; if it's "
 "0, all are unlocked; -1 indicates inconsistency among the items"
 msgstr ""
+"Jei nustatyta 1, visi įstatomieji elementai susieti su pagrindiniu yra "
+"užrakinami; jei nustatyta 0, visi įstatomieji elementai atrakinami; -1 "
+"reiškia, kad tarp elementų nėra darnos"
 
-#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:704
+#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:727
 msgid "Switcher Style"
-msgstr ""
+msgstr "Jungiklio stilius"
 
-#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:705
+#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:728
 msgid "Switcher buttons style"
-msgstr ""
+msgstr "Jungiklio mygtuko stilius"
 
-#: ../gdl/gdl-dock-master.c:761
+#: ../gdl/gdl-dock-master.c:768
 #, c-format
 msgid ""
 "master %p: unable to add object %p[%s] to the hash.  There already is an "
 "item with that name (%p)."
 msgstr ""
+"pagrindinis %p: nepavyko pridėti objekto %p[%s] į groteles.  Jau yra "
+"elementas tokiu vardu (%p)."
 
-#: ../gdl/gdl-dock-master.c:934
+#: ../gdl/gdl-dock-master.c:940
 #, c-format
 msgid ""
 "The new dock controller %p is automatic.  Only manual dock objects should be "
 "named controller."
 msgstr ""
+"Naujasis %p įstatymo valdiklis yra automatinis. Tik rankiniu būdu įstatomi "
+"elementai turėtų būti vadinami valdikliais."
 
-#: ../gdl/gdl-dock-notebook.c:134
+#: ../gdl/gdl-dock-notebook.c:132
 msgid "Page"
 msgstr "Puslapis"
 
-#: ../gdl/gdl-dock-notebook.c:135
+#: ../gdl/gdl-dock-notebook.c:133
 msgid "The index of the current page"
-msgstr ""
+msgstr "Dabartinio puslapio indeksas"
 
-#: ../gdl/gdl-dock-object.c:120
+#: ../gdl/gdl-dock-object.c:118
 msgid "Unique name for identifying the dock object"
-msgstr ""
+msgstr "Unikalus vardas įstatomojo objekto atpažinimui"
 
-#: ../gdl/gdl-dock-object.c:127
+#: ../gdl/gdl-dock-object.c:125
 msgid "Long name"
-msgstr ""
+msgstr "Ilgasis vardas"
 
-#: ../gdl/gdl-dock-object.c:128
+#: ../gdl/gdl-dock-object.c:126
 msgid "Human readable name for the dock object"
-msgstr ""
+msgstr "Žmogui skaitomas įstato objekto vardas"
 
-#: ../gdl/gdl-dock-object.c:134
+#: ../gdl/gdl-dock-object.c:132
 msgid "Stock Icon"
-msgstr ""
+msgstr "Saugyklos piktograma"
 
-#: ../gdl/gdl-dock-object.c:135
+#: ../gdl/gdl-dock-object.c:133
 msgid "Stock icon for the dock object"
-msgstr ""
+msgstr "Saugyklos piktograma įstatomajam objektui"
 
-#: ../gdl/gdl-dock-object.c:141
+#: ../gdl/gdl-dock-object.c:139
 msgid "Dock master"
-msgstr ""
+msgstr "Pagrindinis įstatas"
 
-#: ../gdl/gdl-dock-object.c:142
+#: ../gdl/gdl-dock-object.c:140
 msgid "Dock master this dock object is bound to"
-msgstr ""
+msgstr "Pagrindinis įstatas, su kuriuo yra susietas šis įstato objektas"
 
-#: ../gdl/gdl-dock-object.c:444
+#: ../gdl/gdl-dock-object.c:442
 #, c-format
 msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
 msgstr ""
+"gdl_dock_object_dock iškvietimas įstato objekte %p (objekto tipas %s), kuris "
+"nerealizavo šio metodo"
 
-#: ../gdl/gdl-dock-object.c:576
+#: ../gdl/gdl-dock-object.c:581
 #, c-format
 msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
 msgstr ""
+"Prašoma įstatymo operacija nesusietame objekte %p. Programa gali nulūžti"
 
-#: ../gdl/gdl-dock-object.c:583
+#: ../gdl/gdl-dock-object.c:588
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
 msgstr ""
+"Negalima įstatyti %p į %p, kadangi jie priklauso skirtingiems pagrindams"
 
-#: ../gdl/gdl-dock-object.c:625
+#: ../gdl/gdl-dock-object.c:630
 #, c-format
 msgid ""
 "Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
+"Bandoma susieti su %p jau susietą objektą %p (dabartinis pagrindas: %p)"
 
-#: ../gdl/gdl-dock-paned.c:132
+#: ../gdl/gdl-dock-paned.c:130
 msgid "Position"
-msgstr "Pozicija"
+msgstr "Vieta"
 
-#: ../gdl/gdl-dock-paned.c:133
+#: ../gdl/gdl-dock-paned.c:131
 msgid "Position of the divider in pixels"
-msgstr ""
+msgstr "Skirtuko vieta pikseliais"
 
-#: ../gdl/gdl-dock-placeholder.c:143
+#: ../gdl/gdl-dock-placeholder.c:141
 msgid "Sticky"
 msgstr "Lipnus"
 
-#: ../gdl/gdl-dock-placeholder.c:144
+#: ../gdl/gdl-dock-placeholder.c:142
 msgid ""
 "Whether the placeholder will stick to its host or move up the hierarchy when "
 "the host is redocked"
 msgstr ""
+"Ar vietaženklis prilips prie savo pagrindo ar pakils hierarchija aukštyn, "
+"kai pagrindas bus perstatytas"
 
-#: ../gdl/gdl-dock-placeholder.c:151
+#: ../gdl/gdl-dock-placeholder.c:149
 msgid "Host"
-msgstr ""
+msgstr "Pagrindas"
 
-#: ../gdl/gdl-dock-placeholder.c:152
+#: ../gdl/gdl-dock-placeholder.c:150
 msgid "The dock object this placeholder is attached to"
-msgstr ""
+msgstr "Įstato objektas, prie kurio prikabintas šis vietaženklis"
 
-#: ../gdl/gdl-dock-placeholder.c:159
+#: ../gdl/gdl-dock-placeholder.c:157
 msgid "Next placement"
-msgstr ""
+msgstr "Kita vieta"
 
-#: ../gdl/gdl-dock-placeholder.c:160
+#: ../gdl/gdl-dock-placeholder.c:158
 msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
 msgstr ""
+"Vieta, kurioje elementas bus įstatytas į mūsų pagrindą, jei bus paprašyta "
+"įstatyti į mus"
 
-#: ../gdl/gdl-dock-placeholder.c:169 ../gdl/gdl-dock.c:193
+#: ../gdl/gdl-dock-placeholder.c:167 ../gdl/gdl-dock.c:191
 msgid "Width"
 msgstr "Plotis"
 
-#: ../gdl/gdl-dock-placeholder.c:170
+#: ../gdl/gdl-dock-placeholder.c:168
 msgid "Width for the widget when it's attached to the placeholder"
-msgstr ""
+msgstr "Valdiklio plotis, kai jis prikabintas prie vietaženklio"
 
-#: ../gdl/gdl-dock-placeholder.c:177 ../gdl/gdl-dock.c:201
+#: ../gdl/gdl-dock-placeholder.c:175 ../gdl/gdl-dock.c:199
 msgid "Height"
 msgstr "Aukštis"
 
-#: ../gdl/gdl-dock-placeholder.c:178
+#: ../gdl/gdl-dock-placeholder.c:176
 msgid "Height for the widget when it's attached to the placeholder"
-msgstr ""
+msgstr "Valdiklio aukštis, kai jis prikabintas prie vietaženklio"
 
-#: ../gdl/gdl-dock-placeholder.c:184
+#: ../gdl/gdl-dock-placeholder.c:182
 msgid "Floating Toplevel"
-msgstr ""
+msgstr "Slankusis aukščiausias lygis"
 
-#: ../gdl/gdl-dock-placeholder.c:185
+#: ../gdl/gdl-dock-placeholder.c:183
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
-msgstr ""
+msgstr "Ar vietaženklis užima slankiojo aukščiausiojo lygio vietą"
 
-#: ../gdl/gdl-dock-placeholder.c:191
-msgid "X-Coordinate"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:189
+msgid "X Coordinate"
+msgstr "X koordinatė"
 
-#: ../gdl/gdl-dock-placeholder.c:192
-msgid "X-Coordinate for dock when floating"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:190
+msgid "X coordinate for dock when floating"
+msgstr "X koordinatė įstatui, kai jis slankusis"
 
-#: ../gdl/gdl-dock-placeholder.c:198
-msgid "Y-Coordinate"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:196
+msgid "Y Coordinate"
+msgstr "Y koordinatė"
 
-#: ../gdl/gdl-dock-placeholder.c:199
-msgid "Y-Coordinate for dock when floating"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:197
+msgid "Y coordinate for dock when floating"
+msgstr "Y koordinatė, kai jis slankusis"
 
-#: ../gdl/gdl-dock-placeholder.c:494
+#: ../gdl/gdl-dock-placeholder.c:499
 msgid "Attempt to dock a dock object to an unbound placeholder"
-msgstr ""
+msgstr "Bandoma įstatyti įstato objektą į nesusietą vietaženklį"
 
-#: ../gdl/gdl-dock-placeholder.c:618
+#: ../gdl/gdl-dock-placeholder.c:611
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
 msgstr ""
+"Gautas atkabinimo signalas iš objekto (%p), kuris nėra mūsų pagrindas %p"
 
-#: ../gdl/gdl-dock-placeholder.c:643
+#: ../gdl/gdl-dock-placeholder.c:636
 #, c-format
 msgid ""
 "Something weird happened while getting the child placement for %p from "
 "parent %p"
 msgstr ""
+"Atsitiko kažkas negero bandant gauti vaiko vietą objektui %p iš tėvo %p"
 
-#: ../gdl/gdl-dock-tablabel.c:129
+#: ../gdl/gdl-dock-tablabel.c:126
 msgid "Dockitem which 'owns' this tablabel"
-msgstr ""
+msgstr "Įstatomasis elementas, kuriam priklauso ši kortelės etiketė"
 
-#: ../gdl/gdl-dock-bar.c:109
+#: ../gdl/gdl-dock-bar.c:106
 msgid "GdlDockMaster object which the dockbar widget is attached to"
-msgstr ""
+msgstr "GdlDockMaster objektas, prie kurio prikabinta įstatų juosta"
 
-#: ../gdl/gdl-dock-bar.c:116
+#: ../gdl/gdl-dock-bar.c:113
 msgid "Dockbar style"
-msgstr ""
+msgstr "Įstatų juostos stilius"
 
-#: ../gdl/gdl-dock-bar.c:117
+#: ../gdl/gdl-dock-bar.c:114
 msgid "Dockbar style to show items on it"
-msgstr ""
+msgstr "Įstatų juostos elementų rodymo stilius"
 
-#: ../gdl/gdl-dock.c:178
+#: ../gdl/gdl-dock.c:176
 msgid "Floating"
-msgstr ""
+msgstr "Slankusis"
 
-#: ../gdl/gdl-dock.c:179
+#: ../gdl/gdl-dock.c:177
 msgid "Whether the dock is floating in its own window"
-msgstr ""
+msgstr "Ar įstatas slankioja savo paties lange"
 
-#: ../gdl/gdl-dock.c:187
+#: ../gdl/gdl-dock.c:185
 msgid "Default title for the newly created floating docks"
-msgstr ""
+msgstr "Numatytasis pavadinimas naujai sukuriamiems slankiesiems įstatams"
 
-#: ../gdl/gdl-dock.c:194
+#: ../gdl/gdl-dock.c:192
 msgid "Width for the dock when it's of floating type"
-msgstr ""
+msgstr "Įstatymo plotis kai jo tipas slankusis"
 
-#: ../gdl/gdl-dock.c:202
+#: ../gdl/gdl-dock.c:200
 msgid "Height for the dock when it's of floating type"
-msgstr ""
+msgstr "Įstatymo aukštis kai jo tipas slankusis"
 
-#: ../gdl/gdl-dock.c:209
+#: ../gdl/gdl-dock.c:207
 msgid "Float X"
-msgstr ""
+msgstr "Slinktis X"
 
-#: ../gdl/gdl-dock.c:210
+#: ../gdl/gdl-dock.c:208
 msgid "X coordinate for a floating dock"
-msgstr ""
+msgstr "X koordinatė slankiajam įstatui"
 
-#: ../gdl/gdl-dock.c:217
+#: ../gdl/gdl-dock.c:215
 msgid "Float Y"
-msgstr ""
+msgstr "Slinktis Y"
 
-#: ../gdl/gdl-dock.c:218
+#: ../gdl/gdl-dock.c:216
 msgid "Y coordinate for a floating dock"
-msgstr ""
+msgstr "Y koordinatė slankiajam įstatui"
 
-#: ../gdl/gdl-dock.c:499
+#: ../gdl/gdl-dock.c:475
 #, c-format
 msgid "Dock #%d"
-msgstr ""
+msgstr "Įstatyti #%d"
 
-#: ../gdl/gdl-icons.c:134 ../gdl/gdl-icons.c:135
-msgid "Icon size"
-msgstr "Piktogramų dydis"
+#: ../gdl/layout.ui.h:1
+msgid "Dock items"
+msgstr "Įstatyti elementus"
 
-#: ../gdl/layout.glade.h:2
+#: ../gdl/layout.ui.h:2
 msgid "Layout Managment"
-msgstr ""
+msgstr "Išdėstymų tvarkymas"
 
-#: ../gdl/layout.glade.h:4
+#: ../gdl/layout.ui.h:3
+msgid "Saved layouts"
+msgstr "Išsaugoti išdėstymai"
+
+#: ../gdl/layout.ui.h:4
 msgid "_Load"
 msgstr "Į_kelti"
 
-#: ../gdl/layout.glade.h:5
+#: ../gdl/layout.ui.h:5
 msgid "_Lock dock items"
-msgstr ""
+msgstr "_Užrakinti įstatytus elementus"
+
+#~ msgid "Close"
+#~ msgstr "Užverti"
+
+#~ msgid "Icon size"
+#~ msgstr "Piktogramų dydis"
