--- a/po/bg.po
+++ b/po/bg.po
@@ -1,15 +1,15 @@
 # Bulgarian translation of gdl po-file.
 # Copyright (C) 2007, 2008, 2010 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gdl package.
-# Alexander Shopov <ash@contact.bg>, 2007, 2008, 2010.
+# Alexander Shopov <ash@kambanaria.org>, 2007, 2008, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl master\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-22 22:47+0300\n"
-"PO-Revision-Date: 2010-08-22 22:47+0300\n"
-"Last-Translator: Alexander Shopov <ash@contact.bg>\n"
+"PO-Revision-Date: 2010-08-22 23:13+0300\n"
+"Last-Translator: Alexander Shopov <ash@kambanaria.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
