--- a/po/et.po
+++ b/po/et.po
@@ -12,10 +12,11 @@ msgstr ""
 "Project-Id-Version: GDL MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=gdl&component=general\n"
-"POT-Creation-Date: 2010-04-12 21:19+0000\n"
+"POT-Creation-Date: 2010-12-10 09:53+0000\n"
 "PO-Revision-Date: 2010-05-04 06:44+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -130,8 +131,8 @@ msgstr "Nimi"
 
 #, c-format
 msgid ""
-"While loading layout: don't know how to create a dock object whose nick is '%"
-"s'"
+"While loading layout: don't know how to create a dock object whose nick is "
+"'%s'"
 msgstr ""
 
 msgid "Default title"
