Updated files for 3.0.0 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 3.0.0
+
+* Translation updates
+* Fix missing return values (Frederic Crozat)
+
 Changes in 2.91.92
 
 * Translation updates
