--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 3.0.1
+
+* Set GtkJunctionSides for GdlSwitcher toggle buttons (Christian Hergert)
+* Translation updates
+
 Changes in 3.0.0
 
 * Translation updates
