Updated files for 3.1.5 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 3.1.5
+
+* Fix a crash while docking (Sébastien Granjoux)
+* Fix issues with latest GTK+ (Sébastien Granjoux, Dominique Leuenberger)
+
 Changes in 3.1.4
 
 * Bug 655099 - Resizing one DockItem affects another
