--- a/po/nb.po
+++ b/po/nb.po
@@ -1,35 +1,88 @@
 # Norwegian bokmål translation of gdl.
 # Copyright (C) 2004-2007 Free Software Foundation, Inc.
-# Kjartan Maraas <kmaraas@gnome.org>, 2004-2011.
+# Kjartan Maraas <kmaraas@gnome.org>, 2004-2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gdl 3.1.x\n"
+"Project-Id-Version: gdl 3.3.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-07-18 10:11+0200\n"
-"PO-Revision-Date: 2011-07-18 10:20+0200\n"
+"POT-Creation-Date: 2012-01-06 20:14+0100\n"
+"PO-Revision-Date: 2012-01-06 20:15+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
-"Language-Team: Norwegian bokmaal <i18n-nb@lister.ping.uio.no>\n"
+"Language-Team: Norwegian bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../gdl/gdl-dock-item-grip.c:384
-msgid "Iconify this dock"
-msgstr "Minimer denne dokken"
+#: ../gdl/gdl-dock-bar.c:108 ../gdl/gdl-dock-layout.c:107
+msgid "Master"
+msgstr "Mester"
 
-#: ../gdl/gdl-dock-item-grip.c:386
-msgid "Close this dock"
-msgstr "Lukk denne dokken"
+#: ../gdl/gdl-dock-bar.c:109
+msgid "GdlDockMaster object which the dockbar widget is attached to"
+msgstr "GdlDockMaster-objekt som dokklinjekomponenten er festet til"
 
-#: ../gdl/gdl-dock-item-grip.c:726 ../gdl/gdl-dock-tablabel.c:128
-msgid "Controlling dock item"
-msgstr "Kontrollerende dokkoppføring"
+#: ../gdl/gdl-dock-bar.c:116
+msgid "Dockbar style"
+msgstr "Stil for dokklinje"
 
-#: ../gdl/gdl-dock-item-grip.c:727
-msgid "Dockitem which 'owns' this grip"
-msgstr "Dokkoppføring som «eier» dette håndtaket"
+#: ../gdl/gdl-dock-bar.c:117
+msgid "Dockbar style to show items on it"
+msgstr "Stil for oppføringer på dokklinje"
+
+#: ../gdl/gdl-dock.c:180
+msgid "Floating"
+msgstr "Flytende"
+
+#: ../gdl/gdl-dock.c:181
+msgid "Whether the dock is floating in its own window"
+msgstr "Om dokken flyter i sitt eget vindu"
+
+#: ../gdl/gdl-dock.c:188 ../gdl/gdl-dock-master.c:145
+msgid "Default title"
+msgstr "Forvalgt tittel"
+
+#: ../gdl/gdl-dock.c:189
+msgid "Default title for the newly created floating docks"
+msgstr "Forvalgt tittel for en nye flytende dokker"
+
+#: ../gdl/gdl-dock.c:195 ../gdl/gdl-dock-placeholder.c:174
+msgid "Width"
+msgstr "Bredde"
+
+#: ../gdl/gdl-dock.c:196
+msgid "Width for the dock when it's of floating type"
+msgstr "Bredde for dokken når den er av flytende type"
+
+#: ../gdl/gdl-dock.c:203 ../gdl/gdl-dock-placeholder.c:182
+msgid "Height"
+msgstr "Høyde"
+
+#: ../gdl/gdl-dock.c:204
+msgid "Height for the dock when it's of floating type"
+msgstr "Høyde for dokken når den er av flytende type"
+
+#: ../gdl/gdl-dock.c:211
+msgid "Float X"
+msgstr "Flytende X"
+
+#: ../gdl/gdl-dock.c:212
+msgid "X coordinate for a floating dock"
+msgstr "X-koordinat for en flytende dokk"
+
+#: ../gdl/gdl-dock.c:219
+msgid "Float Y"
+msgstr "Flytende Y"
+
+#: ../gdl/gdl-dock.c:220
+msgid "Y coordinate for a floating dock"
+msgstr "Y-koordinat for en flytende dokk"
+
+#: ../gdl/gdl-dock.c:481
+#, c-format
+msgid "Dock #%d"
+msgstr "Dokk #%d"
 
 #: ../gdl/gdl-dock-item.c:267
 msgid "Orientation"
@@ -101,76 +154,70 @@ msgstr ""
 msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
 "widget at a time; it already contains a widget of type %s"
-msgstr "Prøver å legge til en komponent med type %s til en %s, men den kan kun inneholde en komponent om gangen. Den inneholder en komponent av type %s"
+msgstr ""
+"Prøver å legge til en komponent med type %s til en %s, men den kan kun "
+"inneholde en komponent om gangen. Den inneholder en komponent av type %s"
 
-#: ../gdl/gdl-dock-item.c:1355 ../gdl/gdl-dock-item.c:1405
+#: ../gdl/gdl-dock-item.c:1367 ../gdl/gdl-dock-item.c:1417
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
 msgstr "Ikke støttet dokkstrategi %s i dokkobjekt av type %s"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1513
+#: ../gdl/gdl-dock-item.c:1525
 msgid "UnLock"
 msgstr "Lås opp"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1520
+#: ../gdl/gdl-dock-item.c:1532
 msgid "Hide"
 msgstr "Skjul"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1525
+#: ../gdl/gdl-dock-item.c:1537
 msgid "Lock"
 msgstr "Lås"
 
-#: ../gdl/gdl-dock-item.c:1763
+#: ../gdl/gdl-dock-item.c:1810
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr "Forsøk på å binde en ubundet oppføring %p"
 
-#: ../gdl/gdl-dock-layout.c:121 ../gdl/gdl-dock-bar.c:108
-msgid "Master"
-msgstr "Mester"
+#: ../gdl/gdl-dock-item-grip.c:406
+msgid "Iconify this dock"
+msgstr "Minimer denne dokken"
 
-#: ../gdl/gdl-dock-layout.c:122
+#: ../gdl/gdl-dock-item-grip.c:408
+msgid "Close this dock"
+msgstr "Lukk denne dokken"
+
+#: ../gdl/gdl-dock-item-grip.c:748 ../gdl/gdl-dock-tablabel.c:128
+msgid "Controlling dock item"
+msgstr "Kontrollerende dokkoppføring"
+
+#: ../gdl/gdl-dock-item-grip.c:749
+msgid "Dockitem which 'owns' this grip"
+msgstr "Dokkoppføring som «eier» dette håndtaket"
+
+#: ../gdl/gdl-dock-layout.c:108
 msgid "GdlDockMaster object which the layout object is attached to"
 msgstr "GdlDockMaster-objekt som utformingsobjektet er festet til"
 
-#: ../gdl/gdl-dock-layout.c:129
+#: ../gdl/gdl-dock-layout.c:115
 msgid "Dirty"
 msgstr "Skitten"
 
-#: ../gdl/gdl-dock-layout.c:130
+#: ../gdl/gdl-dock-layout.c:116
 msgid "True if the layouts have changed and need to be saved to a file"
 msgstr "Sann hvis utformingene er endret og må lagres til en fil"
 
-#: ../gdl/gdl-dock-layout.c:561
-#, c-format
-msgid "Could not load layout user interface file '%s'"
-msgstr "Kunne ikke laste fil for brukergrensesnitt for utforming «%s»"
-
-#: ../gdl/gdl-dock-layout.c:618
-msgid "Visible"
-msgstr "Synlig"
-
-#: ../gdl/gdl-dock-layout.c:625
-msgid "Item"
-msgstr "Oppføring"
-
-#: ../gdl/gdl-dock-layout.c:710 ../gdl/gdl-dock-object.c:115
-msgid "Name"
-msgstr "Navn"
-
-#: ../gdl/gdl-dock-layout.c:768
+#: ../gdl/gdl-dock-layout.c:279
 #, c-format
 msgid ""
 "While loading layout: don't know how to create a dock object whose nick is "
 "'%s'"
-msgstr "Ved lasting av utforming: kan ikke lage et dokkobjekt med kallenavn «%s»"
-
-#: ../gdl/gdl-dock-master.c:145 ../gdl/gdl-dock.c:188
-msgid "Default title"
-msgstr "Forvalgt tittel"
+msgstr ""
+"Ved lasting av utforming: kan ikke lage et dokkobjekt med kallenavn «%s»"
 
 #: ../gdl/gdl-dock-master.c:146
 msgid "Default title for newly created floating docks"
@@ -180,13 +227,16 @@ msgstr "Forvalgt tittel for nylig opprettede flytende dokker"
 msgid ""
 "If is set to 1, all the dock items bound to the master are locked; if it's "
 "0, all are unlocked; -1 indicates inconsistency among the items"
-msgstr "Alle dokkoppføringer bundet til hovedoppføring låses hvis denne settes til 1. Hvis den er 0 vil alle være ulåst. -1 indikerer inkonsistens mellom oppføringene"
+msgstr ""
+"Alle dokkoppføringer bundet til hovedoppføring låses hvis denne settes til "
+"1. Hvis den er 0 vil alle være ulåst. -1 indikerer inkonsistens mellom "
+"oppføringene"
 
-#: ../gdl/gdl-dock-master.c:161 ../gdl/gdl-switcher.c:776
+#: ../gdl/gdl-dock-master.c:161 ../gdl/gdl-switcher.c:781
 msgid "Switcher Style"
 msgstr "Stil for bytter"
 
-#: ../gdl/gdl-dock-master.c:162 ../gdl/gdl-switcher.c:777
+#: ../gdl/gdl-dock-master.c:162 ../gdl/gdl-switcher.c:782
 msgid "Switcher buttons style"
 msgstr "Stil for knapper på bytter"
 
@@ -195,14 +245,18 @@ msgstr "Stil for knapper på bytter"
 msgid ""
 "master %p: unable to add object %p[%s] to the hash.  There already is an "
 "item with that name (%p)."
-msgstr "hovedoppføring %p: kan ikke legge til objekt %p[%s] i hash. Det finnes allerede en oppføring med det navnet (%p)."
+msgstr ""
+"hovedoppføring %p: kan ikke legge til objekt %p[%s] i hash. Det finnes "
+"allerede en oppføring med det navnet (%p)."
 
 #: ../gdl/gdl-dock-master.c:944
 #, c-format
 msgid ""
 "The new dock controller %p is automatic.  Only manual dock objects should be "
 "named controller."
-msgstr "Ny dokk-kontrollør %p er automatisk. Kun manuelle dokkobjekter kan gjøres til kontrollører."
+msgstr ""
+"Ny dokk-kontrollør %p er automatisk. Kun manuelle dokkobjekter kan gjøres "
+"til kontrollører."
 
 #: ../gdl/gdl-dock-notebook.c:137
 msgid "Page"
@@ -213,57 +267,75 @@ msgid "The index of the current page"
 msgstr "Indeks for aktiv side"
 
 #: ../gdl/gdl-dock-object.c:116
+msgid "Name"
+msgstr "Navn"
+
+#: ../gdl/gdl-dock-object.c:117
 msgid "Unique name for identifying the dock object"
 msgstr "Unikt navn for å identifisere dokkobjektet"
 
-#: ../gdl/gdl-dock-object.c:123
+#: ../gdl/gdl-dock-object.c:124
 msgid "Long name"
 msgstr "Langt navn"
 
-#: ../gdl/gdl-dock-object.c:124
+#: ../gdl/gdl-dock-object.c:125
 msgid "Human readable name for the dock object"
 msgstr "Lesbart navn for dokkobjektet"
 
-#: ../gdl/gdl-dock-object.c:130
+#: ../gdl/gdl-dock-object.c:131
 msgid "Stock Icon"
 msgstr "Standardikon"
 
-#: ../gdl/gdl-dock-object.c:131
+#: ../gdl/gdl-dock-object.c:132
 msgid "Stock icon for the dock object"
 msgstr "Standardikon for dokkobjektet"
 
-#: ../gdl/gdl-dock-object.c:137
+#: ../gdl/gdl-dock-object.c:145
+msgid "Pixbuf Icon"
+msgstr "Pixbuf-ikon"
+
+#: ../gdl/gdl-dock-object.c:146
+msgid "Pixbuf icon for the dock object"
+msgstr "Pixbuf-ikon for dokkobjektet"
+
+#: ../gdl/gdl-dock-object.c:151
 msgid "Dock master"
 msgstr "Hoveddokk"
 
-#: ../gdl/gdl-dock-object.c:138
+#: ../gdl/gdl-dock-object.c:152
 msgid "Dock master this dock object is bound to"
 msgstr "Hoveddokk som dette dokkobjektet er bundet til"
 
-#: ../gdl/gdl-dock-object.c:435
+#: ../gdl/gdl-dock-object.c:456
 #, c-format
 msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
-msgstr "Kall til gdl_doc_object_dock i et dokkobjekt %p (objekttype er %s) som ikke har implementert denne metoden"
+msgstr ""
+"Kall til gdl_doc_object_dock i et dokkobjekt %p (objekttype er %s) som ikke "
+"har implementert denne metoden"
 
-#: ../gdl/gdl-dock-object.c:574
+#: ../gdl/gdl-dock-object.c:595
 #, c-format
 msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
-msgstr "Dokkoperasjon forespurt i et ikke-bundet objekt %p. Programmet kan krasje"
+msgstr ""
+"Dokkoperasjon forespurt i et ikke-bundet objekt %p. Programmet kan krasje"
 
-#: ../gdl/gdl-dock-object.c:581
+#: ../gdl/gdl-dock-object.c:602
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
-msgstr "Kan ikke dokke %p til %p fordi de tilhører forskjellige hovedoppføringer"
+msgstr ""
+"Kan ikke dokke %p til %p fordi de tilhører forskjellige hovedoppføringer"
 
-#: ../gdl/gdl-dock-object.c:623
+#: ../gdl/gdl-dock-object.c:644
 #, c-format
 msgid ""
 "Attempt to bind to %p an already bound dock object %p (current master: %p)"
-msgstr "Forsøk på å binde til %p et allerede bundet dokkobjekt %p (aktiv hovedoppføring: %p)"
+msgstr ""
+"Forsøk på å binde til %p et allerede bundet dokkobjekt %p (aktiv "
+"hovedoppføring: %p)"
 
 #: ../gdl/gdl-dock-paned.c:128
 msgid "Position"
@@ -281,7 +353,9 @@ msgstr "Klebrig"
 msgid ""
 "Whether the placeholder will stick to its host or move up the hierarchy when "
 "the host is redocked"
-msgstr "Hvorvidt plassholder vil holde seg til sin vert eller flytte opp i hierarkiet når verten dokkes på nytt"
+msgstr ""
+"Hvorvidt plassholder vil holde seg til sin vert eller flytte opp i "
+"hierarkiet når verten dokkes på nytt"
 
 #: ../gdl/gdl-dock-placeholder.c:156
 msgid "Host"
@@ -299,19 +373,13 @@ msgstr "Neste plassering"
 msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
-msgstr "Posisjon en oppføring vil bli dokket til vår vert hvis en forespørsel gjøres for å dokke til oss"
-
-#: ../gdl/gdl-dock-placeholder.c:174 ../gdl/gdl-dock.c:195
-msgid "Width"
-msgstr "Bredde"
+msgstr ""
+"Posisjon en oppføring vil bli dokket til vår vert hvis en forespørsel gjøres "
+"for å dokke til oss"
 
 #: ../gdl/gdl-dock-placeholder.c:175
 msgid "Width for the widget when it's attached to the placeholder"
 msgstr "Bredde på komponenten når den er festet til plassholder"
-
-#: ../gdl/gdl-dock-placeholder.c:182 ../gdl/gdl-dock.c:203
-msgid "Height"
-msgstr "Høyde"
 
 #: ../gdl/gdl-dock-placeholder.c:183
 msgid "Height for the widget when it's attached to the placeholder"
@@ -355,81 +423,9 @@ msgstr "Fikk signal om å koble fra fra et objekt (%p) som ikke er vår vert %p"
 msgid ""
 "Something weird happened while getting the child placement for %p from "
 "parent %p"
-msgstr "Noe rart skjedde ved henting av plassering av barn for %p fra opphav %p"
+msgstr ""
+"Noe rart skjedde ved henting av plassering av barn for %p fra opphav %p"
 
 #: ../gdl/gdl-dock-tablabel.c:129
 msgid "Dockitem which 'owns' this tablabel"
 msgstr "Dokkoppføring som «eier» denne faneetiketten"
-
-#: ../gdl/gdl-dock-bar.c:109
-msgid "GdlDockMaster object which the dockbar widget is attached to"
-msgstr "GdlDockMaster-objekt som dokklinjekomponenten er festet til"
-
-#: ../gdl/gdl-dock-bar.c:116
-msgid "Dockbar style"
-msgstr "Stil for dokklinje"
-
-#: ../gdl/gdl-dock-bar.c:117
-msgid "Dockbar style to show items on it"
-msgstr "Stil for oppføringer på dokklinje"
-
-#: ../gdl/gdl-dock.c:180
-msgid "Floating"
-msgstr "Flytende"
-
-#: ../gdl/gdl-dock.c:181
-msgid "Whether the dock is floating in its own window"
-msgstr "Om dokken flyter i sitt eget vindu"
-
-#: ../gdl/gdl-dock.c:189
-msgid "Default title for the newly created floating docks"
-msgstr "Forvalgt tittel for en nye flytende dokker"
-
-#: ../gdl/gdl-dock.c:196
-msgid "Width for the dock when it's of floating type"
-msgstr "Bredde for dokken når den er av flytende type"
-
-#: ../gdl/gdl-dock.c:204
-msgid "Height for the dock when it's of floating type"
-msgstr "Høyde for dokken når den er av flytende type"
-
-#: ../gdl/gdl-dock.c:211
-msgid "Float X"
-msgstr "Flytende X"
-
-#: ../gdl/gdl-dock.c:212
-msgid "X coordinate for a floating dock"
-msgstr "X-koordinat for en flytende dokk"
-
-#: ../gdl/gdl-dock.c:219
-msgid "Float Y"
-msgstr "Flytende Y"
-
-#: ../gdl/gdl-dock.c:220
-msgid "Y coordinate for a floating dock"
-msgstr "Y-koordinat for en flytende dokk"
-
-#: ../gdl/gdl-dock.c:481
-#, c-format
-msgid "Dock #%d"
-msgstr "Dokk #%d"
-
-#: ../gdl/layout.ui.h:1
-msgid "Dock items"
-msgstr "Dokkoppføringer"
-
-#: ../gdl/layout.ui.h:2
-msgid "Layout Managment"
-msgstr "Håndtering av utforming"
-
-#: ../gdl/layout.ui.h:3
-msgid "Saved layouts"
-msgstr "Lagrede utforminger"
-
-#: ../gdl/layout.ui.h:4
-msgid "_Load"
-msgstr "_Last"
-
-#: ../gdl/layout.ui.h:5
-msgid "_Lock dock items"
-msgstr "_Lås dokkoppføringer"
