Updated files for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 3.3.91
+
+* Merge more changes from Inkscape (Alex Valavanis)
+
 Changes in 3.3.90:
 
 * Hide preview window correctly (Johannes Schmid)
